--- a/index.html
+++ b/index.html
@@ -3,61 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Your Name</title>
+    <title>Digital Marketing Agency</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <section class="hero">
         <div class="container">
-            <h1>Your Name</h1>
-            <p>AI Developer | Data Scientist | Innovator</p>
-            <nav>
-                <ul>
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="content">
+                <h1>Wardiere Inc.</h1>
+                <h2>Digital Marketing Agency</h2>
+                <p>Unlocking Digital Horizons: Navigating Success through Innovative Marketing</p>
+            </div>
+            <div class="image-wrapper">
+                <img src="image-placeholder.jpg" alt="Team working on digital marketing">
+            </div>
         </div>
-    </header>
-    <main>
-        <section id="about" class="section">
-            <div class="container">
-                <h2>About Me</h2>
-                <p>Welcome to my portfolio! I specialize in AI projects, including custom OCR pipelines, machine learning models, and multi-language NLP applications.</p>
-            </div>
-        </section>
-        <section id="projects" class="section">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <h3>Custom OCR Pipeline</h3>
-                        <p>Developed a high-accuracy OCR solution to eliminate third-party dependencies.</p>
-                    </div>
-                    <div class="project-card">
-                        <h3>AI-driven Analytics</h3>
-                        <p>Created predictive models for business optimization and decision-making.</p>
-                    </div>
-                    <div class="project-card">
-                        <h3>Multi-language NLP</h3>
-                        <p>Implemented NLP models supporting multiple languages and dialects.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="contact" class="section">
-            <div class="container">
-                <h2>Contact</h2>
-                <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-                <p>GitHub: <a href="https://github.com/your-github-username">github.com/your-github-username</a></p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Your Name | All Rights Reserved</p>
-        </div>
-    </footer>
+    </section>
 </body>
 </html>
