--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p>Unlocking Digital Horizons: Navigating Success through Innovative Marketing</p>
             </div>
             <div class="image-wrapper">
-                <img src="image-placeholder.jpg" alt="Team working on digital marketing">
+                <img src="image-placeholder.png" alt="Team working on digital marketing">
             </div>
         </div>
     </section>
