--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="hero">
         <div class="container">
             <div class="content">
-                <h1>Wardiere Inc.</h1>
+                <h1>Sheeda Corporation.</h1>
                 <h2>Digital Marketing Agency</h2>
                 <p>Unlocking Digital Horizons: Navigating Success through Innovative Marketing</p>
             </div>
