--- a/index.html
+++ b/index.html
@@ -3,21 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Marketing Agency</title>
+    <title>Portfolio | Your Name</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Hero Section -->
     <section class="hero">
         <div class="container">
             <div class="content">
-                <h1>Sheeda Corporation.</h1>
-                <h2>Digital Marketing Agency</h2>
-                <p>Unlocking Digital Horizons: Navigating Success through Innovative Marketing</p>
+                <h1>Your Name</h1>
+                <h2>AI Developer | Data Scientist | Innovator</h2>
+                <p>Building cutting-edge solutions with Artificial Intelligence and Machine Learning. Transforming ideas into impactful results.</p>
             </div>
             <div class="image-wrapper">
-                <img src="image-placeholder.png" alt="Team working on digital marketing">
+                <img src="your-image.jpg" alt="Your Image">
             </div>
         </div>
     </section>
+
+    <!-- About Section -->
+    <section class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I specialize in creating innovative AI solutions, including custom OCR pipelines, multi-language NLP applications, and predictive analytics. My passion lies in developing impactful technologies that bridge the gap between innovation and real-world needs.</p>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3>Custom OCR Pipeline</h3>
+                    <p>Eliminated third-party dependencies with a high-accuracy OCR solution.</p>
+                </div>
+                <div class="project-card">
+                    <h3>AI-driven Analytics</h3>
+                    <p>Predictive models for optimizing business operations and decision-making.</p>
+                </div>
+                <div class="project-card">
+                    <h3>Multi-language NLP</h3>
+                    <p>Built advanced NLP systems supporting multiple languages and dialects.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>I'd love to connect with you! Feel free to reach out via the links below.</p>
+            <ul class="contact-links">
+                <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
+                <li>GitHub: <a href="https://github.com/your-github-username">github.com/your-github-username</a></li>
+                <li>LinkedIn: <a href="https://linkedin.com/in/your-linkedin-profile">linkedin.com/in/your-profile</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Your Name | All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
