--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Building cutting-edge solutions with Artificial Intelligence and Machine Learning. Transforming ideas into impactful results.</p>
             </div>
             <div class="image-wrapper">
-                <img src="your-image.jpg" alt="Your Image">
+                <img src="image-placeholder.png" alt="Your Image">
             </div>
         </div>
     </section>
