--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Waleed Iqbal Butt</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -68,6 +68,12 @@
             class="icon"
             onclick="location.href='https://github.com/Waleed-marketing'"
           />
+          <img
+          src="./assets/x.jpeg"
+          alt="My Twitter profile"
+          class="icon"
+          onclick="location.href='https://x.com/waleedrunsad'"
+        />
         </div>
       </div>
     </section>
