--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Waleed Iqbal Butt</h1>
         <p class="section__text__p2">Full Stack Digital Marketer</p>
-        <!-- <div class="btn-container">
-          <button
+        <div class="btn-container">
+          <!-- <button
             class="btn btn-color-2"
             onclick="window.open('./assets/resume-example.pdf')"
           >
             Download CV
-          </button>
+          </button> -->
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
           </button>
-        </div> -->
+        </div>
         <div id="socials-container">
           <img
             src="./assets/linkedin.png"
@@ -358,7 +358,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="waleediqbalbutt@gmail.com">Example@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -366,7 +366,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/waleediqbalbutt">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -381,7 +381,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Waleed Iqbal Butt. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
