--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="waleediqbalbutt@gmail.com">Example@gmail.com</a></p>
+          <p><a href="waleediqbalbutt@gmail.com">waleediqbalbutt@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
