--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>4+ years <br />Certified PPC Specialist</p>
             </div>
             <div class="details-container">
               <img
@@ -106,7 +106,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.Sc. Business Administration/Marketing<br />Meta And Google Ads Expert</p>
             </div>
           </div>
           <div class="text-container">
