--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Waleed Iqbal Butttt</div>
+      <div class="logo">Waleed Iqbal Butt</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -41,7 +41,7 @@
         <img src="./assets/image-placeholder.png" alt="Waleed Butt profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hellooo, I'm</p>
         <h1 class="title">Waleed Iqbal Butt</h1>
         <p class="section__text__p2">Full Stack Digital Marketer</p>
         <div class="btn-container">
