edit contact info to hire me

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Download CV
           </button> -->
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+            Hire Me
           </button>
         </div>
         <div id="socials-container">
