update hire me link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           >
             Download CV
           </button> -->
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
             HIRE ME
           </button>
         </div>
