--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="waleediqbalbutt@gmail.com">waleediqbalbutt@gmail.com</a></p>
+          <p><a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=DmwnWrRnZFQBXTHLFKDdvbdBXsTjXrdBscjdkcdHhbqSSdNsGNGqfvbPpXqVfNWckBJPMGHBVlwQ">waleediqbalbutt@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
