--- a/index.html
+++ b/index.html
@@ -111,12 +111,11 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Hi, I’m Waleed Iqbal Butt, a Digital Marketing Specialist with over 4 years of experience helping brands grow through data-driven Google Ads and Meta Ads campaigns.
+
+              I’m passionate about creating marketing strategies that don’t just look good; they perform. My focus is always on ROI, optimizing campaigns for maximum conversions, and making every click count.
+
+              With a background in Business Administration and Marketing, I bridge the gap between creative storytelling and analytical performance. Alongside campaign management, I handle the technical side of marketing too! Which includes setting up Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.
             </p>
           </div>
         </div>
@@ -134,7 +133,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Marketing & Advertising</h2>
             <div class="article-container">
               <article>
                 <img
@@ -143,8 +142,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <h3>Google Ads</h3>
+                  <p>Search, Display, Performance Max – ROI-focused campaigns</p>
                 </div>
               </article>
               <article>
@@ -154,8 +153,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <h3>Meta Ads (Facebook & Instagram)</h3>
+                  <p>Targeted ad management</p>
                 </div>
               </article>
               <article>
@@ -165,8 +164,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
+                  <h3>PPC Strategy & Optimization</h3>
+                  <p>Results-driven approach</p>
                 </div>
               </article>
               <article>
@@ -176,8 +175,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <h3>Audience Targeting & Retargeting</h3>
+                  <p>Precision-based marketing</p>
                 </div>
               </article>
               <article>
@@ -187,8 +186,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>Conversion Rate Optimization</h3>
+                  <p>Boosting performance</p>
                 </div>
               </article>
               <article>
@@ -198,14 +197,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
+                  <h3>Keyword Research & Ad Copywriting</h3>
+                  <p>Crafting high-performing ads</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Analytics & Tracking</h2>
             <div class="article-container">
               <article>
                 <img
@@ -214,8 +213,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>Campaign Budget Management</h3>
+                  <p>Efficient ad spend allocation</p>
                 </div>
               </article>
               <article>
@@ -225,8 +224,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Facebook Pixel</h3>
+                  <p>Integration & tracking</p>
                 </div>
               </article>
               <article>
@@ -236,8 +235,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Campaign Analytics</h3>
+                  <p>Data monitoring</p>
                 </div>
               </article>
               <article>
@@ -247,8 +246,30 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>A/B Testing</h3>
+                  <p>Performance improvement</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML (Experienced)</h3>
+                  <p>Tag and pixel implementation</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS (Experienced)</h3>
+                  <p>Custom styling for tracking elements</p>
                 </div>
               </article>
             </div>
