--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
           </div>
           <div class="text-container">
             <p>
-              Hi, I’m Waleed Iqbal Butt, a Digital Marketing Specialist with over 4 years of experience helping brands grow through data-driven Google Ads and Meta Ads campaigns.
-
-              I’m passionate about creating marketing strategies that don’t just look good; they perform. My focus is always on ROI, optimizing campaigns for maximum conversions, and making every click count.
-
-              With a background in Business Administration and Marketing, I bridge the gap between creative storytelling and analytical performance. Alongside campaign management, I handle the technical side of marketing too! Which includes setting up Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.
+              I help brands grow through data-driven Google Ads and Meta Ads campaigns. I’m passionate about building marketing strategies that don’t just look good — they perform. My focus is always on ROI, optimizing campaigns for maximum conversions, and making every click count.
+            <p/>
+            <p>
+              With a background in Business Administration and Marketing, I bridge the gap between creative storytelling and analytical performance. Alongside campaign management, I also handle the technical side of marketing — setting up Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.
             </p>
           </div>
         </div>
