--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
           </div>
           <div class="text-container">
             <p>
-              I help brands grow through data-driven Google Ads and Meta Ads campaigns. I’m passionate about building marketing strategies that don’t just look good — they perform. My focus is always on ROI, optimizing campaigns for maximum conversions, and making every click count.
+              I help brands grow through data-driven Google Ads and Meta Ads campaigns. I’m passionate about building marketing strategies that don’t just look good; they perform. My focus is always on ROI, optimizing campaigns for maximum conversions, and making every click count.
             <p/>
             <p>
-              With a background in Business Administration and Marketing, I bridge the gap between creative storytelling and analytical performance. Alongside campaign management, I also handle the technical side of marketing — setting up Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.
+              With a background in Business Administration and Marketing, I bridge the gap between creative storytelling and analytical performance. Alongside campaign management, I also handle the technical side of marketing! This includes setting up Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.
             </p>
           </div>
         </div>
