css and description change

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="text-container">
             <p>
-              I help brands grow through data-driven Google Ads and Meta Ads campaigns. I’m passionate about building marketing strategies that perform, focusing on ROI, maximizing conversions, and making every click count. With a background in Business Administration and Marketing, I bridge creative storytelling and analytical performance. Alongside campaign management, I handle the technical side of marketing, including Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.
+              I help brands grow through data-driven Google Ads and Meta Ads, focusing on ROI, conversions, and measurable results. With proven experience and as a certified PPC Expert, I combine creative strategy with analytics and handle the technical side of marketing, including Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.             
             </p>
           </div>
         </div>
@@ -139,7 +139,7 @@
                 />
                 <div>
                   <h3>Google Ads</h3>
-                  <p>Search, Display, Performance Max – ROI-focused campaigns</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -149,8 +149,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Meta Ads (Facebook & Instagram)</h3>
-                  <p>Targeted ad management</p>
+                  <h3>Meta Ads</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -161,7 +161,7 @@
                 />
                 <div>
                   <h3>PPC Strategy & Optimization</h3>
-                  <p>Results-driven approach</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -172,7 +172,7 @@
                 />
                 <div>
                   <h3>Audience Targeting & Retargeting</h3>
-                  <p>Precision-based marketing</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -183,7 +183,7 @@
                 />
                 <div>
                   <h3>Conversion Rate Optimization</h3>
-                  <p>Boosting performance</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -194,7 +194,7 @@
                 />
                 <div>
                   <h3>Keyword Research & Ad Copywriting</h3>
-                  <p>Crafting high-performing ads</p>
+                  <p>CExperienced</p>
                 </div>
               </article>
             </div>
@@ -210,7 +210,7 @@
                 />
                 <div>
                   <h3>Campaign Budget Management</h3>
-                  <p>Efficient ad spend allocation</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -221,7 +221,7 @@
                 />
                 <div>
                   <h3>Facebook Pixel</h3>
-                  <p>Integration & tracking</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -232,7 +232,7 @@
                 />
                 <div>
                   <h3>Campaign Analytics</h3>
-                  <p>Data monitoring</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -243,7 +243,7 @@
                 />
                 <div>
                   <h3>A/B Testing</h3>
-                  <p>Performance improvement</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -253,8 +253,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML (Experienced)</h3>
-                  <p>Tag and pixel implementation</p>
+                  <h3>HTML</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -264,8 +264,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS (Experienced)</h3>
-                  <p>Custom styling for tracking elements</p>
+                  <h3>CSS</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
