--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             onclick="location.href='https://www.linkedin.com/in/waleediqbalbutt'"
           />
           <img
-            src="./assets/github.png"
+            src="./assets/instagram.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/Waleed-marketing'"
@@ -97,7 +97,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>4+ years <br />Certified PPC Specialist</p>
+              <p>2+ years <br />Certified PPC Specialist</p>
             </div>
             <div class="details-container">
               <img
@@ -106,7 +106,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Business Administration/Marketing<br />Meta And Google Ads Expert</p>
+              <p>Bachelors in Business Administration<br />Meta And Google Ads Expert</p>
             </div>
           </div>
           <div class="text-container">
@@ -194,7 +194,7 @@
                 />
                 <div>
                   <h3>Keyword Research & Ad Copywriting</h3>
-                  <p>CExperienced</p>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
@@ -253,7 +253,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>HTML & CSS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -264,7 +264,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>Landing Page Optimization</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -397,7 +397,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Waleed Iqbal Butt. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024-2026 Waleed Iqbal Butt. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
