--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             onclick="location.href='https://www.linkedin.com/in/waleediqbalbutt'"
           />
           <img
-            src="./assets/instagramimage.png"
+            src="./assets/instta.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/Waleed-marketing'"
