--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
           />
           <img
             src="./assets/instagram (1).png"
-            alt="My Github profile"
+            alt="My Instagram profile"
             class="icon"
             onclick="location.href='https://github.com/Waleed-marketing'"
           />
           <img
-          src="./assets/x.jpeg"
-          alt="My Twitter profile"
+          src="./assets/twitter.png"
+          alt="My X profile"
           class="icon"
           onclick="location.href='https://x.com/waleedrunsad'"
         />
