--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelors in Business Administration<br />Meta And Google Ads Expert</p>
+              <p>Bachelors in Business Administration</p>
             </div>
           </div>
           <div class="text-container">
             <p>
               I help brands grow through data-driven Google Ads and Meta Ads, focusing on ROI, conversions, and measurable results. With proven experience and as a certified PPC Expert, I combine creative strategy with analytics and handle the technical side of marketing, including Google Tag Manager, Facebook Pixel, and tracking tools to ensure every result is measurable.             
             </p>
+          </br></br></br></br>
           </div>
         </div>
       </div>
