Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/waleediqbalbutt'"
+            onclick="location.href='https://www.instagram.com/waleedrunsad'"
           />
           <img
             src="./assets/instagram (1).png"
@@ -376,7 +376,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=DmwnWrRnZFQBXTHLFKDdvbdBXsTjXrdBscjdkcdHhbqSSdNsGNGqfvbPpXqVfNWckBJPMGHBVlwQ">waleediqbalbutt@gmail.com</a></p>        </div>
+          <p><a href="https://mail.google.com/mail/?view=cm&to="waleediqbalbutt@gmail.com">Email me</a></p>        </div>
         <div class="contact-info-container">
           <img
             src="./assets/linkedin.png"
