--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Get Your ROAS Skyrocket NOW!</div>
+        <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
+          Get Your <span style="color:#16a34a;">ROAS</span>
+          <span style="color:#dc2626;">Skyrocket</span> NOW!
+        </div>      
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -41,7 +45,7 @@
         <img src="./assets/image-placeholder.png" alt="Waleed Butt profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hello👋, I'm</p>
         <h1 class="title">Waleed Iqbal Butt</h1>
         <p class="section__text__p2">Full Stack Digital Marketer</p>
         <div class="btn-container">
