Update logo with clickable link and styled text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Get Your ROAS Skyrocket NOW!</div>
+      <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
+          Get Your <span style="color:#16a34a;">ROAS</span>
+          <span style="color:#dc2626;">Skyrocket</span> NOW!
+      </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
