Update Instagram link to LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             src="./assets/instagram (1).png"
             alt="My Instagram profile"
             class="icon"
-            onclick="location.href='https://github.com/Waleed-marketing'"
+            onclick="location.href='https://www.linkedin.com/in/waleediqbalbutt/'"
           />
           <img
           src="./assets/twitter.png"
