--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="https://mail.google.com/mail/?view=cm&to="waleediqbalbutt@gmail.com">Email me</a></p>        </div>
+          <p><a href="https://mail.google.com/mail/?view=cm&to=waleediqbalbutt@gmail.com">Email me</a></p>        </div>
         <div class="contact-info-container">
           <img
             src="./assets/linkedin.png"
