--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <nav id="desktop-nav">
         <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
-          Get Your <span style="color:#16a34a;">ROAS</span><br>
-          <span style="color:#dc2626;">Skyrocket</span> NOW!
-        </div>      
+          <b>Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
+          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!</b>
+        </div>     
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -26,8 +26,8 @@
     </nav>
     <nav id="hamburger-nav">
       <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
-          Get Your <span style="color:#16a34a;">ROAS</span><br>
-          <span style="color:#dc2626;">Skyrocket</span> NOW!
+          <b>Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
+          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!</b>
       </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
