Refactor logo text in navigation sections

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
+    <link rel="icon" href="/assets/favicon1.jpeg" type="image/jpeg">
   </head>
   <body>
     <nav id="desktop-nav">
         <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
-          <b>Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
-          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!</b>
+          Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
+          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!
         </div>     
       <div>
         <ul class="nav-links">
@@ -26,8 +27,8 @@
     </nav>
     <nav id="hamburger-nav">
       <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
-          <b>Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
-          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!</b>
+        Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
+          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!
       </div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
