Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
-    <link rel="icon" href="./assets/favicon2.jpeg" type="image/jpeg">
+    <link rel="icon" href="./assets/favicon.jpeg" type="image/jpeg">
   </head>
   <body>
     <nav id="desktop-nav">
