--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap' rel='stylesheet'>
     <link rel="icon" href="./assets/favicon.jpeg" type="image/jpeg">
   </head>
   <body>
