--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="desktop-nav">
         <div class="logo" onclick="location.href='https://www.upwork.com/freelancers/~01958254216aef3537'">
           Get Your <span style="color:#16a34a;">ROAS</span>💲<br>
-          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀!
+          <span style="color:#dc2626;">SKYROCKET</span> NOW🚀
         </div>     
       <div>
         <ul class="nav-links">
