--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link href='https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap' rel='stylesheet'>
-    <link rel="icon" href="./assets/logo.jpeg" type="image/jpeg">
+    <link rel="icon" href="./assets/faviconvideo.mp4" type="video/mp4">
   </head>
   <body>
     <nav id="desktop-nav">
