--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link href='https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap' rel='stylesheet'>
-    <link rel="icon" href="./assets/fav.jpg" type="image/jpg">
+    <link rel="icon" href="./assets/fav-og.png" type="image/png">
   </head>
   <body>
     <nav id="desktop-nav">
